# my_backend_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  bandit.yaml  docker-compose.yml  pyproject.toml
cli/: shell.py
src/: config.py  main.py
src/core/: config.py  context.py  databases.py  model.py  redis.py
src/test/core/: test_config.py
tests/: test_main.py
tests/core/: test_config.py  test_model.py
